--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,24 +1,32 @@
 ---
 name: Trần Thanh Tùng
-avatar: /public/static/avatar.jpg
+avatar: /profile.jpg
 occupation: 'Một người hay cười'
 email: tunglol1024@gmail.com
 github: https://github.com/Tung-hehe
 facebook: https://www.facebook.com/tieuthanh1024
 ---
 
-## Chào bạn!
+import { Twemoji } from '@/components/common/Twemoji.tsx'
+
+## Chào bạn! <Twemoji className="mx-2" emoji="waving-hand"/>
 
 Mình tên là Trần Thanh Tùng, tốt nghiệp trường Đại học Khoa học Tự nhiên, Đại học Quốc gia Hà Nội.
 Hiện tại mình đang làm việc trong lĩnh vực Tối ưu hóa, kết hợp với công cụ lập trình để giải quyết
-các bài toán lớn trong thực tế.
+các bài toán thực tế.
 
-Blog này giống như một quyển sổ nhỏ để mình lưu lại các câu chuyện và ý tưởng của bản thân, đồng thời chia
-sẻ kiến thức và kinh nghiệm trong quá trình học tập và làm việc của mình.
+Blog này giống như một quyển sổ nhỏ để mình lưu lại các ý tưởng của bản thân, đồng thời chia sẻ kiến
+thức và kinh nghiệm của mình.
 
 > Sharing is learning!
 
-Mong bạn sẽ tìm được điều gì đó thú vị ở đây, hoặc ít nhất là biết nó tồn tại! Và thật vui làm sao nếu mình nhận
-được phản hồi và góp ý từ bạn.
+Mong bạn sẽ tìm được điều gì đó thú vị ở đây, hoặc ít nhất là biết nó tồn tại!
+Chúc bạn đọc vui vẻ!  <Twemoji className="mx-2" emoji="clinking-beer-mugs"/>
 
-Chúc bạn đọc vui vẻ!
+*Blog này được lấy cảm hứng từ [quanhoang-pm](https://quanhoang-pm.github.io/) và tham khảo từ
+[timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog),
+[leohuynh](https://www.leohuynh.dev/).*
+
+*This blog is inspired by [quanhoang-pm](https://quanhoang-pm.github.io/) and references from
+[timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog),
+[leohuynh](https://www.leohuynh.dev/).*
