Complete home page

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,7 +1,7 @@
 ---
 name: Trần Thanh Tùng
 avatar: /profile.jpg
-occupation: 'Một người hay cười'
+occupation: 'Learner | Builder'
 email: tunglol1024@gmail.com
 github: https://github.com/Tung-hehe
 facebook: https://www.facebook.com/tieuthanh1024
@@ -24,9 +24,5 @@ Mong bạn sẽ tìm được điều gì đó thú vị ở đây, hoặc ít n
 Chúc bạn đọc vui vẻ!  <Twemoji className="mx-2" emoji="clinking-beer-mugs"/>
 
 *Blog này được lấy cảm hứng từ [quanhoang-pm](https://quanhoang-pm.github.io/) và tham khảo từ
-[timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog),
-[leohuynh](https://www.leohuynh.dev/).*
-
-*This blog is inspired by [quanhoang-pm](https://quanhoang-pm.github.io/) and references from
 [timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog),
 [leohuynh](https://www.leohuynh.dev/).*
