--- a/data/posts/introdution-of-LP-modeling.mdx
+++ b/data/posts/introdution-of-LP-modeling.mdx
@@ -13,8 +13,8 @@ có dạng sau
 ```math
 \begin{aligned}
   \text{min} \quad & c^Tx && \\
-  \text{s.t} \quad & Ax & \leq & b \\
-      & x & \geq & 0 \\
+  \text{s.t} \quad & Ax & \leq & \quad b \\
+      & x & \geq & \quad 0 \\
 \end{aligned}
 ```
 Trong đó $b$, $c$ là các vector cột hằng số, $A$ là ma trận hằng số,
