--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,9 +9,7 @@ facebook: https://www.facebook.com/tieuthanh1024
 
 import { Twemoji } from '@/components/common/Twemoji.tsx'
 
-## Chào bạn! <Twemoji className="mx-2" emoji="waving-hand"/>
-
-Mình tên là Trần Thanh Tùng, tốt nghiệp trường Đại học Khoa học Tự nhiên, Đại học Quốc gia Hà Nội.
+Mình là Trần Thanh Tùng, tốt nghiệp trường Đại học Khoa học Tự nhiên, Đại học Quốc gia Hà Nội.
 Hiện tại mình đang làm việc trong lĩnh vực Tối ưu hóa, kết hợp với công cụ lập trình để giải quyết
 các bài toán thực tế.
 
