--- a/data/posts/the-first-blog.mdx
+++ b/data/posts/the-first-blog.mdx
@@ -1,7 +1,7 @@
 ---
 title: Blog đầu tiên
 date: 2024-07-20
-tags: [blog]
+tags: [blog, hello world]
 summary: Một chút chia sẻ về trang web này
 image:
 authors: [default]
