--- a/data/posts/modeling-tips-trick.mdx
+++ b/data/posts/modeling-tips-trick.mdx
@@ -1,7 +1,7 @@
 ---
 title: Một số kỹ thuật mô hình hóa
 date: 2024-08-25
-tags: [modeling, math, LP, MILP]
+tags: [modeling, math, LP, MILP, tip and trick]
 summary: Giới thiệu một số kỹ thuật mô hình hóa hay sử dụng.
 image:
 authors: [default]
