Fix /in in blog

--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
@@ -29,7 +29,7 @@ bằng cách điền số vào những ô còn lại. Câu đố được thiế
 Một số ký hiệu dùng trong bài toán
 - $n$ là một số chính phương biểu diễn cho cỡ của lưới
 - $F$ là tập hợp các cặp $(i, j)$ biểu diễn tọa độ của các ô đã điền sẵn trên lưới
-- $V(i, j)$ là số được điền trong ô $(i, j) /in F$
+- $V(i, j)$ là số được điền trong ô $(i, j) \in F$
 - $B_b$ là tập hợp các ô $(i, j)$ trong khối thứ $b$ ($0 \leq b < n$).
 
 ### 2.1. Biến quyết định
