--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
@@ -41,7 +41,7 @@ Với mỗi ô $(i, j)$ trong lưới, xây dựng biến $x_(i, j)$ thỏa mãn
 ```math
 x(i, j) = \begin{cases}
     1 & \text{nếu ô } (i, j) \text{ được điền ngôi sao } \\
-    0 & \text{otherwise}
+    0 & \text{ngược lại}
 \end{cases}
 ```
 
@@ -67,14 +67,14 @@ x(i, j) = \begin{cases}
   Điều kiện này được mô tả lại như sau, nếu ô $(i, j)$ được điền ngôi sao
   thì tất cả các ô kề ô $(i, j)$ không được điền ngôi sao
   ```math
-    x(i, j) = 1 \Rightarrow \sum\limits_{\forall (p, q) \in N_(i, j)}{x(p, q)} = 0, \forall 0 \leq i < n_R, 0 \leq j < n_C
+    x(i, j) = 1 \Rightarrow \sum\limits_{\forall (p, q) \in N(i, j)}{x(p, q)} = 0, \forall 0 \leq i < n_R, 0 \leq j < n_C
   ```
 
   Tuyến tính hóa điều kiện trên bằng [phương pháp hình học](/blog/modeling-tips-trick#2-m%C3%B4-h%C3%ACnh-h%C3%B3a-r%C3%A0ng-bu%E1%BB%99c-phi-tuy%E1%BA%BFn-b%E1%BA%B1ng-h%C3%ACnh-h%E1%BB%8Dc)
   ta thu được điều kiện dưới đây và đó chính là điều kiện sử dụng trong mô hình
 
   ```math
-    f_(i, j) \cdot x(i, j) + \sum\limits_{\forall (p, q) \in N_(i, j)}{x(p, q)} \leq f_(i, j), \forall 0 \leq i < n_R, 0 \leq j < n_C
+    f(i, j) \cdot x(i, j) + \sum\limits_{\forall (p, q) \in N(i, j)}{x(p, q)} \leq f(i, j), \forall 0 \leq i < n_R, 0 \leq j < n_C
   ```
 
 ### 2.3. Hàm mục tiêu
