--- a/data/posts/the-first-blog.mdx
+++ b/data/posts/the-first-blog.mdx
@@ -8,8 +8,8 @@ authors: [default]
 ---
 
 Được lên kế hoạch từ đầu năm 2022 với mục đích chia sẻ những ý tưởng và câu chuyện của bản thân,
-tuy nhiên do hồi đó chưa đủ kiến thức và còn phải quay cuồng với việc học tập, nghiên cứu trên
-trường nên phải đến giữa năm 2024 mình mới bắt tay vào xây dựng trang web này.
+tuy nhiên do hồi đó chưa đủ kiến thức và còn phải quay cuồng với việc học tập, nghiên cứu ở
+trường Đại học nên phải đến giữa năm 2024 mình mới bắt tay vào xây dựng trang web này.
 
 Sau khi hoàn thành, mình thấy rất phấn khích và hào hứng muốn viết những bài viết thật hay chia sẻ đến
 bạn đọc, vì thế hãy đón đọc các bài viết sắp tới của mình trên blog nhé! Mong rằng bạn sẽ tìm được
