Add first part of galaxies blog

--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
@@ -12,4 +12,26 @@ authors: [default]
 
 import { Twemoji } from '@/components/common/Twemoji.tsx'
 
+## 1. Giới thiệu
+
+Galaxies là một câu đố logic được mô tả như sau, cho một lưới các ô vuông
+với các chấm tượng trưng cho các ngôi sao, người chơi cần chia lưới thành các
+khu vực gọi là các thiên hà thỏa mãn các điều kiện sau:
+- Lưới được phủ kín bởi các thiên hà
+- Các thiên hà không chồng chéo lên nhau
+- Mỗi thiên hà phải và chỉ chứa một ngôi sao ở giữa làm tâm
+- Mỗi thiên hà phải đối xứng tâm qua ngôi sao ở giữa
+
+Dưới đây là ví dụ cho một câu đố Galaxies cỡ 10×18 và lời giải
+
+![star-battle-example](/posts/Galaxies.png)
+
+## 2. Mô hình hóa câu đố
+
 Comming soon! <Twemoji className="mx-2" emoji="face-savouring-delicious-food" size=""/>
+
+## 3. Kết luận
+
+*Code mô hình hóa Star Battle bằng python có tại [LogicPuzzlesSolver](https://github.com/Tung-hehe/LogicPuzzlesSolver).*
+
+Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
