--- a/data/posts/modeling-tips-trick.mdx
+++ b/data/posts/modeling-tips-trick.mdx
@@ -84,8 +84,8 @@ Tạo thêm biến nhị phân $y$ thỏa mãn
 
 ```math
 z = \begin{cases}
-  1 & 2x + y \geq 5 \\
-  0 & x + 2y \geq 5 \\
+  1 & \text{nếu } 2x + y \geq 5 \\
+  0 & \text{nếu } x + 2y \geq 5 \\
 \end{cases}
 ```
 
