--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
@@ -32,8 +32,8 @@ Một số ký hiệu dùng trong bài toán
 - $n$ là số ngôi sao cần điền vào mỗi hàng, cột, khu vực
 - $S$ là tập hợp các khu vực
 - $C_s$ là các ô $(i, j)$ thuộc khu vực $s \in S$
-- $N(i, j)$ là tập hợp các ô cạnh ô $(i, j)$ (theo cả hướng chéo)
-- $f(i, j)$ là số ô kề ô $(i, j)$ (theo cả hướng chéo)
+- $$N_{ij}$$ là tập hợp các ô cạnh ô $(i, j)$ (theo cả hướng chéo)
+- $$f_{ij}$$ là số ô kề ô $(i, j)$ (theo cả hướng chéo)
 
 ### 2.1. Biến quyết định
 
@@ -49,33 +49,34 @@ x(i, j) = \begin{cases}
 
 - Mỗi hàng chứa đúng $n$ ngôi sao
 ```math
-\sum\limits_{j = 0}^{n_C - 1}{x(i, j)} = n, \forall 0 \leq i < n_R
+\sum\limits_{j = 0}^{n_C - 1}{x(i, j)} = n, \\ \forall 0 \leq i < n_R
 ```
 
 - Mỗi cột chứa đúng $n$ ngôi sao
 ```math
-\sum\limits_{i = 0}^{n_R - 1}{x(i, j)} = n, \forall 0 \leq j < n_C
+\sum\limits_{i = 0}^{n_R - 1}{x(i, j)} = n, \\ \forall 0 \leq j < n_C
 ```
 
 - Mỗi khu vực chứa đúng $n$ ngôi sao
 ```math
-\sum\limits_{\forall (i, j) \in C_s}{x(i, j)} = n, \forall s \in S
+\sum\limits_{\forall (i, j) \in C_s}{x(i, j)} = n, \\ \forall s \in S
 ```
 
 - Một ngôi sao không nằm cạnh bất kỳ ngôi sao nào khác
 
   Điều kiện này được mô tả lại như sau, nếu ô $(i, j)$ được điền ngôi sao
   thì tất cả các ô kề ô $(i, j)$ không được điền ngôi sao
+
   ```math
-    x(i, j) = 1 \Rightarrow \sum\limits_{\forall (p, q) \in N(i, j)}{x(p, q)} = 0, \forall 0 \leq i < n_R, 0 \leq j < n_C
+    x(i, j) = 1 \Rightarrow \sum\limits_{\forall (p, q) \in N_{ij}}{x(p, q)} = 0, \\ \forall 0 \leq i < n_R, 0 \leq j < n_C
   ```
 
   Tuyến tính hóa điều kiện trên bằng [phương pháp hình học](/blog/modeling-tips-trick#2-m%C3%B4-h%C3%ACnh-h%C3%B3a-r%C3%A0ng-bu%E1%BB%99c-phi-tuy%E1%BA%BFn-b%E1%BA%B1ng-h%C3%ACnh-h%E1%BB%8Dc)
   ta thu được điều kiện dưới đây và đó chính là điều kiện sử dụng trong mô hình
 
-  ```math
-    f(i, j) \cdot x(i, j) + \sum\limits_{\forall (p, q) \in N(i, j)}{x(p, q)} \leq f(i, j), \forall 0 \leq i < n_R, 0 \leq j < n_C
-  ```
+```math
+  f_{ij} \cdot x(i, j) + \sum\limits_{\forall (p, q) \in N_{ij}}{x(p, q)} \leq f_{ij}, \\ \forall 0 \leq i < n_R, 0 \leq j < n_C
+```
 
 ### 2.3. Hàm mục tiêu
 
@@ -85,6 +86,6 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 
 ## 3. Kết luận
 
-*Code mô hình hóa Star Battle bằng python có tại [LogicPuzzlesSolver](https://github.com/Tung-hehe/LogicPuzzlesSolver).*
+*Code mô hình hóa Star Battle bằng python có tại [LogicPuzzlesSolver/startBattle](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/starBattle.py).*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
