--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mô hình hóa câu đố Galaxies
-date: 2024-09-03
+date: 2024-08-28
 series:
   order: 3
   title: Mô hình hóa các câu đố logic
@@ -21,6 +21,8 @@ khu vực gọi là các thiên hà thỏa mãn các điều kiện sau:
 - Các thiên hà không chồng chéo lên nhau
 - Mỗi thiên hà phải và chỉ chứa một ngôi sao ở giữa làm tâm
 - Mỗi thiên hà phải đối xứng tâm qua ngôi sao ở giữa
+
+*Tham khảo [wikipedia](https://en.wikipedia.org/wiki/Tentai_Show)*
 
 Dưới đây là ví dụ cho một câu đố Galaxies cỡ 10×18 và lời giải
 
