Test facebook comment

--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mô hình hóa câu đố Binox
-date: 2024-08-30
+date: 2024-08-29
 series:
   order: 5
   title: Mô hình hóa các câu đố logic
@@ -25,3 +25,21 @@ Người chơi cần hoàn thiện lưới bằng cách điền vào những ô 
 Dưới đây là ví dụ cho một câu đố Binox cỡ 12×12 và lời giải
 
 ![binox-example](/posts/Binox.png)
+
+## 2. Mô hình hóa câu đố
+
+### 2.1. Biến quyết định
+
+### 2.2. Các ràng buộc
+
+### 2.3. Hàm mục tiêu
+
+Bài toán này không có hàm mục tiêu, bởi vì ta không cần tối thiểu hóa hay tối đa hóa gì cả, việc
+cần làm chỉ làm tìm ra một nghiệm chất nhận được. Về mặt kỹ thuật, khi lập trình ta có thể để hàm
+mục tiêu là một hằng số (mình hay chọn số 0).
+
+## 3. Kết luận
+
+*Code mô hình hóa Binox bằng python có tại [LogicPuzzlesSolver/binox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)
+
+Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
