Complete binox post

--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
@@ -99,7 +99,8 @@ thiên hà đó.
   \begin{cases}
     \sum\limits_{(u, v) \in V_p}{x(u, v)} \geq n_p \cdot t_{ijgp} \\
     \sum\limits_{(u, v) \in V_p}{x(u, v)} + 1\leq t_{ijgp} + n_p\\
-  \end{cases} \\\ \forall 0 \leq g < n_G, (i, j) \in F_g, p \in P_{ijg}
+  \end{cases}
+  \\ \forall 0 \leq g < n_G, (i, j) \in F_g, p \in P_{ijg}
   ```
 
   Cuối cùng, điều kiện ban đầu sẽ được tuyến tính hóa như sau
@@ -123,6 +124,8 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 Điểm nhấn của câu đố này nằm ở 2 điều kiện cuối, mỗi điều kiện lại có một tác dụng khác nhau nhưng
 đều có một điểm chung là nếu không để ý kỹ ta rất có thể sẽ bỏ qua chúng. Để tránh trường hợp này
 ta cần suy nghĩ kỹ về bài toán đồng thời thử giải nhiều trường hợp khác nhau để phát hiện ra vấn đề (nếu có).
+
+Tham khảo thêm các câu đố Galaxies và biến thể tại [Krazydad/galaxies](https://krazydad.com/galaxies/).
 
 *Code mô hình hóa Galaxies bằng python có tại [LogicPuzzlesSolver/galaxies](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/galaxies.py).*
 
