--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
@@ -86,6 +86,8 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 
 ## 3. Kết luận
 
+Tham khảo thêm các câu đố Star Battle và biến thể tại [Krazydad/start-battle](https://krazydad.com/starbattle/).
+
 *Code mô hình hóa Star Battle bằng python có tại [LogicPuzzlesSolver/startBattle](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/starBattle.py).*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
