--- a/data/posts/modeling-tips-trick.mdx
+++ b/data/posts/modeling-tips-trick.mdx
@@ -51,6 +51,10 @@ cụ thể là các điều kiện sau
 - Sử dụng phương pháp này khi biết được tất cả các điểm thỏa mãn điều kiện ban đầu
 - Phải tồn tại một tập lồi chứa đủ và chỉ chứa các điểm thỏa mãn điều kiện
 - Tập lồi trên phải được biểu diễn dễ dàng qua các điều kiện tuyến tính khác
+- Trong các bải viết tiếp theo mình sẽ gọi tắt kỹ thuật này là **phương pháp hình học**
+(tên gọi này hoàn toàn bắt nguồn từ cá nhân mình, không hề tham khảo từ bất kỳ tài liệu nào,
+nên có thể nó chưa phải một thuật ngữ chính xác, nếu bạn biết thuật ngữ cho phương pháp này hãy
+cho mình biết để chỉnh sửa nhé)
 
 ## 3. Mô hình hóa ràng buộc phi tuyến dạng “$A$ hoặc $B$”
 
