--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
@@ -86,6 +86,8 @@ của bài toàn đã được mô hình hóa một cách rất dễ dàng với
 hay được sử dụng khi mô hình hóa, chúng ta sẽ còn gặp lại các biến nhị phân kiểu này ở các bài viết cùng
 series.
 
+Tham khảo thêm các câu đố Sudoku và biến thể tại [Krazydad/sudoku](https://krazydad.com/sudoku/).
+
 *Code mô hình hóa Sudoku bằng python có tại [LogicPuzzlesSolver/sudoku](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
