--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
@@ -6,7 +6,7 @@ series:
   title: Mô hình hóa các câu đố logic
 tags: [modeling, math, MILP, programing, python]
 summary: Mô hình hóa và giải câu đố Troix bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
-image:
+image: /posts/Troix.png
 authors: [default]
 ---
 
