--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
@@ -88,6 +88,6 @@ series.
 
 Tham khảo thêm các câu đố Sudoku và biến thể tại [Krazydad/sudoku](https://krazydad.com/sudoku/).
 
-*Code mô hình hóa Sudoku bằng python có tại [LogicPuzzlesSolver/sudoku](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)
+*Code mô hình hóa Sudoku bằng python có tại [LogicPuzzlesSolver/sudoku](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
