--- a/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
+++ b/data/posts/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
@@ -122,6 +122,6 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 Tham khảo thêm các câu đố Triox và biến thể tại [Krazydad/triox](https://krazydad.com/troix/). Hãy thử mô
 hình hóa các biến thể của câu đố này nhé!
 
-*Code mô hình hóa Troix bằng python có tại [LogicPuzzlesSolver/triox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)
+*Code mô hình hóa Troix bằng python có tại [LogicPuzzlesSolver/triox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
