Update date in author

--- a/data/authors/en/default.mdx
+++ b/data/authors/en/default.mdx
@@ -12,7 +12,9 @@ import { Twemoji } from '@/components/common/Twemoji.tsx'
 
 I am Tran Thanh Tung. I graduated from the VNU University of Science.
 Currently, I am working in the field of Optimization, combining programming tools
-to solve real-world problems. This blog serves as a personal notebook where I record
+to solve real-world problems.
+
+This blog serves as a personal notebook where I record
 my ideas and share my knowledge and experiences.
 
 > Sharing is learning!
