Add config for mobilbe nav

--- a/data/posts/en/the-first-blog.mdx
+++ b/data/posts/en/the-first-blog.mdx
@@ -1,23 +1,19 @@
 ---
-title: Blog đầu tiên
+title: The first blog
 date: 2024-07-20
 tags: [blog, hello world]
-summary: Một chút chia sẻ về trang web này
+summary: Some insights into this website
 image:
 authors: [default]
 ---
 
-Được lên kế hoạch từ đầu năm 2022 với mục đích chia sẻ những ý tưởng và câu chuyện của bản thân,
-tuy nhiên do hồi đó chưa đủ kiến thức và còn phải quay cuồng với việc học tập, nghiên cứu ở
-trường Đại học nên phải đến giữa năm 2024 mình mới bắt tay vào xây dựng trang web này.
+I've been wanting to start a blog since early 2022 to share my thoughts and experiences,
+but life (and school!) got in the way. Finally, in mid-2024, I was able to make it happen.
 
-Sau khi hoàn thành, mình thấy rất phấn khích và hào hứng muốn viết những bài viết thật hay chia sẻ đến
-bạn đọc, vì thế hãy đón đọc các bài viết sắp tới của mình trên blog nhé! Mong rằng bạn sẽ tìm được
-thứ gì đó thú vị và thật mừng khi nó giúp ích cho bạn. Cảm ơn bạn vì đã đọc đến đây và chúc bạn những
-điều tốt đẹp nhất!
+I'm pumped to share some awesome content with you! So stay tuned for new posts.
+I hope you find something cool here. Thanks for reading, and good luck with everything!
 
-*Xin cảm ơn [quanhoang-pm](https://quanhoang-pm.github.io/), blog của
-anh đã truyền cảm hứng để em làm một blog cho riêng mình. Cảm ơn
-[timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog) và
-[leohuynh](https://www.leohuynh.dev/) vì đã là nguồn tài liệu tham khảo
-vô giá trong quá trình phát triển trang web này.*
+
+*Thank you [quanhoang-pm](https://quanhoang-pm.github.io/), your blog has inspired me to create my own blog.
+Thank you [timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog)
+and [leohuynh](https://www.leohuynh.dev/) for being invaluable resources in the development of this website.*
